# TFE25-462-rnfoc-ofdm

./: .gitattributes  .gitignore  BUILDING.md  CMakeLists.txt  DEVELOPMENT.md  INSTALLATION.md  README.md  ROADMAP.md  USAGE.md  ethsetup.sh  requirements.txt  rfnoc_block_schmidl_cox_block_diagram.drawio
apps/: CMakeLists.txt  create_tx.py  demodulate_rx.py  plot_metric_lsb.py  plot_signal.py  rx_to_file.cpp  rx_to_file_fft.cpp  rx_to_file_graph.cpp  rx_to_file_multi_usrp.cpp  tx_waveforms_radar.cpp
apps/signals/: OFDM_frame_1024_128_1_25_BPSK_QPSK.txt
data/long_schmidl_cox_fft.signal/: ber_results.csv  generated.txt
data/mean_all.all/: OFDM_frame_1024_128_4_16_BPSK_QPSK.txt  generated.txt
examples/: CMakeLists.txt
examples/processing/: plot_metric_lsb.py
examples/python/: exemples.py
fpga/ofdm/: CMakeLists.txt
fpga/ofdm/rfnoc_block_schmidl_cox/: Makefile  Makefile.srcs  axi_latency.sv  axi_shift_registers.sv  complex_trunc.sv  detector.sv  metric_calculator.sv  noc_shell_schmidl_cox.sv  peak_finder.sv  rfnoc_block_schmidl_cox.sv  rfnoc_block_schmidl_cox_tb.sv  safe_divisor.sv  symbol_autocorrelator.sv  symbol_energy.sv
icores/: CMakeLists.txt  x310_rfnoc_image_core.yml  x310_rfnoc_image_core_no_schmidl_cox.yml  x310_rfnoc_image_core_with_fft.yml
include/rfnoc/ofdm/: CMakeLists.txt  schmidl_cox_block_control.hpp
lib/: CMakeLists.txt  schmidl_cox_block_control.cpp
python/: CMakeLists.txt  pyrfnoc-ofdm.cpp  schmidl_cox_block_control_python.hpp  setup.py.in
python/rfnoc_ofdm/: __init__.py  detector.py  metric_calculator.py  ofdm_frame.py  plotting.py  utils.py
rfnoc/: CMakeLists.txt
rfnoc/blocks/: schmidl_cox.yml
sim/bus_sizes/: compare_signals.py  complex_signal.py  complex_signal_tests.py  metrics.py  vcd_helpers.py
sim/bus_sizes/data/: rfnoc_block_schmidl_cox_tb.vcd
sim/bus_sizes/results/: python_vs_vcd.csv  results.csv
sim/schmidl_cox/: metric_calculator.py  plotting.py  simulate.py
tests/: plot_tests.py  signal_K1024_CP128_CPp128_M1_N1_preambleBPSK_payloadQPSK.txt  signal_K1024_CP128_CPp128_M1_N1_preambleBPSK_payloadQPSK_out.txt  signal_K1024_CP128_CPp128_M1_N1_preambleBPSK_payloadQPSK_usrp_recv.txt  signal_K1024_CP128_CPp128_M1_N1_preambleBPSK_payloadQPSK_usrp_recv_out.txt  signal_K16_CP8_CPp8_M1_N1_preambleBPSK_payloadQPSK.txt  signal_K16_CP8_CPp8_M1_N1_preambleBPSK_payloadQPSK_out.txt
tests/ber/: ber_results_raw_correlation.csv  ber_results_schmidl_cox.csv  ber_results_schmidl_cox_fft.csv  compute_ber_raw.py  compute_ber_schmidl_cox.py  compute_ber_schmidl_cox_fft.py
tests/detected/: analyse.py  signal_info.txt
tests/detected/data_256/: OFDM_frame_1024_128_5_4_BPSK_QPSK.txt  ber_results.csv
tests/detected/data_4/: ber_results.csv  signal.txt  signal_info.txt
tests/detection_idx/: OFDM_frame_1024_128_5_3_BPSK_QPSK.txt  analyse.py  bers.csv  errors.csv  errors.md  signal_info.txt
tests/runtime/: initial.py  initial_correlation_plot.py  initial_plot.py  initial_util_plot.py  plot_figure.py  schmidl_cox.py  schmidl_cox_fft.py  schmidl_cox_fft_plot.py  schmidl_cox_plot.py  timing_results_initial.csv  timing_results_initial_util.csv  timing_results_schmidl_cox.csv  timing_results_schmidl_cox_fft.csv
tests/sync_idx/: compute_detection_error.py  plot_histogram.py  sync_idx_errors_results.csv
tests/timing/: classical.py  optimized.py  timing_results_classical.csv  timing_results_optimized.csv
tests/utilization/: block_resource.csv  pie_plot.py  summary.txt
utils/ofdmlib/: OFDM_frame_1024_128_1_3_BPSK_QPSK.txt  channel.py  exemples.py  ofdm_frame.py  plotting.py  time_domain_symbols.txt
utils/ofdmlib/results/: OFDM_frame_1024_128_1_3_BPSK_QPSK.txt
